#6065 Use overlaying scrollbar in property-grid - react Fixes #6065

--- a/packages/survey-creator-core/src/components/scroll.scss
+++ b/packages/survey-creator-core/src/components/scroll.scss
@@ -35,6 +35,8 @@
   margin-inline-start: -1px;
   display: none;
   z-index: 30;
+  inset-inline-end: 0;
+  inset-inline-start: initial;
   @-moz-document url-prefix() {
     scrollbar-width: thin;
     scrollbar-color: $border transparent;
@@ -51,4 +53,7 @@
 
 .svc-scroll__container {
   width: 100%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
